--- a/params.yaml
+++ b/params.yaml
@@ -37,3 +37,6 @@ mlflow_config:
   run_name: mlops
   registered_model_name: ElasticNetWineModel
   remote_server_uri: http://127.0.0.1:1234
+
+model_monitor:
+ monitor_dashboard_html: report/data_and_target_drift_dashboard.html
